--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/EmpleadosRinku_BD
+spring.datasource.url=jdbc:postgresql://localhost:5432/rinku_db
 spring.datasource.username=postgres
 spring.datasource.password=karen
 
